# kanban

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  readme.md  runner.py
.github/workflows/: test.yml
backend/: database.py  main.py
backend/api/: routers.py
backend/api/v1/: auth_router.py  board_router.py
backend/core/decorators/: read_only.py  (+1 more)
backend/database/: database_provider.py  db_config.py  session_provider.py  unit_of_work.py  uow_provider.py
backend/dependancies/: annotated_types.py  auth_dep.py  board_svc_dep.py  columns_dep.py  db_dep.py  member_svc_dep.py  permission_dep.py  states.py  tasks_dep.py  uow_dep.py  user_dep.py
backend/dependencies/: annotated_types.py  auth_dep.py  db_dep.py  permission_dep.py  uow_dep.py
backend/exceptions_handlers/: base_exception_handler.py  board_handler.py  columns_exception_handler.py  member_exception_handler.py  pydantic_handler.py  sqlalchemy_exception_handler.py  tasks_exception_handler.py  user_handler.py
backend/kanban/: main.py
backend/migrations/: env.py
backend/models/: mixins.py  models.py
backend/schemas/: board_schema.py  columns_schema.py  generic.py  member_schema.py  pagination_schema.py  select board_members where board_id = 5.sql  tasks_schema.py  token_schema.py  user_schema.py
scripts/: entrypoint.sh
tests/: conftest.py  db.py
tests/test_board_svc/: test_board_svc.py
tests/test_columns_svc/: test_column_svc.py
tests/test_member_svc/: test_member_svc.py
tests/test_task_svc/: test_task_svc.py
tests/test_user_svc/: test_user_svc.py
(+118 files in other folders)
