[project]
name = "kanban"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.1",
    "asyncpg>=0.31.0",
    "fastapi[all]>=0.128.0",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.10.1",
    "sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
dev = ["aiosqlite>=0.22.1", "pytest-asyncio>=1.3.0", "ruff>=0.15.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "ANN", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
combine-as-imports = true
lines-after-imports = 2
